--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   left: 0;
   bottom: 0;
   background: linear-gradient(70deg, rgba(0, 0, 0, 1) 40%, rgba(0, 0, 0, 0) 80%),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2) 50%);
+    linear-gradient(to bottom, rgba(0, 0, 0, 0) 45%, rgba(0, 0, 0, 1) 50%);
 }
 
 ::-webkit-scrollbar {
