--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,38 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background: linear-gradient(70deg, rgba(0, 0, 0, 1) 40%, rgba(0, 0, 0, 0) 80%),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0) 45%, rgba(0, 0, 0, 1) 50%);
+  /* sm */
+  @media screen and (max-width: 767px) {
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 50%,
+      rgba(0, 0, 0, 1) 90%
+    );
+  }
+  /* md */
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 40%,
+      rgba(0, 0, 0, 1) 80%
+    );
+  }
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    background: linear-gradient(
+        75deg,
+        rgba(0, 0, 0, 1) 35%,
+        rgba(0, 0, 0, 0) 70%
+      ),
+      linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 90%);
+  }
+  @media screen and (min-width: 1280px) {
+    background: linear-gradient(
+        70deg,
+        rgba(0, 0, 0, 1) 30%,
+        rgba(0, 0, 0, 0) 60%
+      ),
+      linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 90%);
+  }
 }
 
 ::-webkit-scrollbar {
