--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,28 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+.custom-slick .slick-slide {
+  margin: 0 14px;
+}
+
+.custom-slick .slick-list {
+  margin: 0 -14px;
+}
+
+.custom-slick .slick-arrow {
+  z-index: 100;
+  position: absolute;
+}
+
+.custom-slick .slick-prev,
+.custom-slick .slick-next {
+  width: 40px;
+  height: 40px;
+}
+
+.custom-slick .slick-arrow:before {
+  font-size: 40px;
+  opacity: 1;
+  color: #7eca9c;
+}
